Implement infrastructure for seed points including SeedManager